istio/istio-raw/serviceEntry/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  namespace: default
  labels:
    app: service-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
      - name: service-a
        image: poxstone/flask_any_response
        ports:
        - containerPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
  namespace: default
  labels:
    app: service-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
      - name: service-b
        image: poxstone/flask_any_response
        ports:
        - containerPort: 8080


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-c
  namespace: default
  labels:
    app: service-c
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-c
  template:
    metadata:
      labels:
        app: service-c
    spec:
      containers:
      - name: service-c
        image: poxstone/flask_any_response
        ports:
        - containerPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-d
  namespace: default
  labels:
    app: service-d
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-d
  template:
    metadata:
      labels:
        app: service-d
    spec:
      containers:
      - name: service-d
        image: poxstone/flask_any_response
        ports:
        - containerPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-e
  namespace: default
  labels:
    app: service-e
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-e
  template:
    metadata:
      labels:
        app: service-e
    spec:
      containers:
      - name: service-e
        image: poxstone/flask_any_response
        ports:
        - containerPort: 8080


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-f
  namespace: default
  labels:
    app: service-f
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-f
  template:
    metadata:
      labels:
        app: service-f
    spec:
      containers:
      - name: service-f
        image: poxstone/flask_any_response
        ports:
        - containerPort: 8080
