istio/istio-raw/serviceEntry/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: default-a
spec:
  selector:
    app: service-a
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: default-a
spec:
  selector:
    app: service-b
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: service-c
  namespace: default-a
spec:
  selector:
    app: service-c
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: service-d
  namespace: default-a
spec:
  selector:
    app: service-d
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort


---
apiVersion: v1
kind: Service
metadata:
  name: service-e
  namespace: default-a
spec:
  selector:
    app: service-e
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort


---
apiVersion: v1
kind: Service
metadata:
  name: service-f
  namespace: default-a
spec:
  selector:
    app: service-f
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
