istio/istio-raw/serviceEntry/gateway-a.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: services-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "*"
    port:
      name: http
      number: 80
      protocol: HTTP
    #tls:
    #  mode: SIMPLE
    #  credentialName: wildcard-credential

# curl istio-ingressgateway.istio-system.svc.cluster.local
