istio/istio-raw/serviceEntry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-ingress
  namespace: default-a
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1  ## minikube ingress
spec:
  defaultBackend:
    service:
      name: service-a
      port:
        name: http
